vector API